--- a/css/selfmadeStyles.css
+++ b/css/selfmadeStyles.css
@@ -113,19 +113,19 @@ body {
 .btn-dark:focus,
 .btn-dark:active {
     color: #E9453A;
-    background-color: #F8F8F8;
+    background-color:#F8F8F8;
 }
 
 .btn-light {
     border-radius: 0;
-    color: #213E50;
-    background-color: #F8F8F8;
+    color: #F8F8F8 ;
+    background-color: #213E50;
 }
 
 .btn-light:hover,
 .btn-light:focus,
 .btn-light:active {
-    color: #E9453A;
+    color: #213E50;
     background-color: #F8F8F8;
 }
 
